tests/neg/i18265.scala
trait Foo

val foo = new Foo:
  extension (s: String)
    def twice // error
